
Ignore duplicates is now enabled by default. Turn it off with --ignoreduplicates=false

Fixed problem with state maintaining meter drivers and wildcard ids.
A HCA driver was producing telegrams with values that jumped up and down.
This was due to the fact that the meter state in the driver was updated
through multiple different telegrams (this is how the meter works).
Clearly a single state object could not properly maintain the state for all
possible meters matching the wildcard, the state became a random mix
of whater telegrams arrived.

The fix now, is that a meter C++ object for a uniqe id (not wildcard)
is created only when the first telegram arrives that matches the wildcard.
Thus each meter will have its own C++ object, in which the correct state
is maintained.

Version 1.1.0: 2021-02-20

Vincent Privat added code for properly decoding several types of izar meter.
He also added full support for the heat meter sharky 775!
Thanks Vincent!

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!vvvvvvvvvvvvvvvvvvvvvv

Important! Since the new code decodes the correct meter id from the izar
telegrams, therefore your current izar meter setup will break! You have
to update your meter files with the new id. The id is still not
the id that is printed on the meter. However, the numbers that are
printed on the meter are now available in the json eg:
"prefix":"H19CA","serial_number":"026273" which makes it easier
for you to find the proper meter id to listen to.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Added support for telegrams with different dll id vs tpl id.

Such telegrams can be generated when a standalone radio converter
(with its own id) is attached to an mbus meter (with its own id).
Ie there are two distinct ids. The id specified to wmbusmeters will
be now tried both against the dll id and the tpl id, previously
it was only tried against the dll id.

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!vvvvvvvvvvvvvvvvvvvvvv
